--- a/Resources/FooterComponent.uz.resx
+++ b/Resources/FooterComponent.uz.resx
@@ -162,7 +162,7 @@
     <comment/>
   </data>
   <data name="DesignedBy" xml:space="preserve">
-    <value>&lt;strong&gt;&lt;a href="/akiss" onclick="window.open('https://ilmhub.uz', '_blank')"&gt;Ilmhub Team tomonidan&lt;/strong&gt;&lt;/a&gt; ❤️  bilan yaratildi</value>
+    <value>&lt;strong&gt;&lt;a href="/" onclick="window.open('https://ilmhub.uz', '_blank')"&gt;Ilmhub Team tomonidan&lt;/strong&gt;&lt;/a&gt; ❤️  bilan yaratildi</value>
     <comment/>
   </data>
   <data name="pages" xml:space="preserve">
