--- a/Resources/TeachersComponent.uz.resx
+++ b/Resources/TeachersComponent.uz.resx
@@ -126,7 +126,7 @@
     <comment/>
   </data>
   <data name="teachersubtitle" xml:space="preserve">
-    <value>Bizning jamoamizga qo'shiling va muvaffaqiyatli martaba yarating. Biz bilan malakangizni oshiring va maoshingizni 35 ~ 100% ga oshiring.</value>
+    <value>Bizning ahil jamoamizga qo'shiling va muvaffaqiyatli martabaga erishing.</value>
     <comment/>
   </data>
   <data name="registration" xml:space="preserve">
