--- a/Resources/TeachersAnnounce.uz.resx
+++ b/Resources/TeachersAnnounce.uz.resx
@@ -130,13 +130,13 @@
     <value>Tanlov</value>
   </data>
   <data name="1subtitle" xml:space="preserve">
-    <value>Barcha fanlardan ustozlarni tanlov asosida ishga taklif etamiz</value>
+    <value>Ishga mahorat darslarii va suhbat asosida qabul qilinadi</value>
   </data>
   <data name="2title" xml:space="preserve">
     <value>Katta imkoniyat</value>
   </data>
   <data name="2subtitle" xml:space="preserve">
-    <value>Ingliz tilida dars bera oladigan ustozlar tanlovlarsiz barcha fanlarga qabul qilinadi</value>
+    <value>Zamonaviy elektron jihozlar bilan jihozlangan barcha qulayliklarga ega maktab</value>
   </data>
   <data name="3title" xml:space="preserve">
     <value>Kelishuv</value>
